# studienarbeit-florianfrank

./: .travis.yml  Atemschutzplaner.cfg  Atemschutzterminplaner.cabal  README.md  haddock.html  index.html  installationAndConfig.html  stack.yaml  technicalStructure.html  travis.yml  userManual.html
Atemschutzterminplaner/: Atemschutzterminplaner.cabal  travis.yml
app/: Main.hs
css/: atemschutzplaner.css
docs/: index.html  installationAndConfig.html  userManual.html
haddock/: Atemschutzterminplaner.haddock  Control-App.html  Control-DatabaseSrv.html  Model-Config.html  Model-RESTDatatypes.html  Web-Views-AddAppointment.html  Web-Views-AddMember.html  Web-Views-AppointmentManagement.html  Web-Views-Home.html  Web-Views-Impressum.html  Web-Views-Logout.html  Web-Views-MemberManagement.html  Web-Views-NoSessionKey.html  Web-Views-Register.html  doc-index.html  index.html  mini_Control-App.html  mini_Control-DatabaseSrv.html  mini_Model-Config.html  mini_Model-RESTDatatypes.html  mini_Web-Views-AddAppointment.html  mini_Web-Views-AddMember.html  mini_Web-Views-AppointmentManagement.html  mini_Web-Views-Home.html  mini_Web-Views-Impressum.html  mini_Web-Views-Logout.html  mini_Web-Views-MemberManagement.html  mini_Web-Views-NoSessionKey.html  mini_Web-Views-Register.html
haddock/src/: Control.App.html  Control.DatabaseSrv.html  Model.Config.html  Model.RESTDatatypes.html  Web.Views.AddAppointment.html  Web.Views.AddMember.html  Web.Views.AppointmentManagement.html  Web.Views.Home.html  Web.Views.Impressum.html  Web.Views.Logout.html  Web.Views.MemberManagement.html  Web.Views.NoSessionKey.html  Web.Views.Register.html
src/: View.hs
src/Control/: App.hs  DatabaseSrv.hs
src/Model/: Config.hs  Login.hs  Member.hs  RESTDatatypes.hs
src/Web/: View.hs
src/Web/Views/: AddAppointment.hs  AddMember.hs  AppointmentManagement.hs  Appointmentmanagement.hs  Home.hs  Impressum.hs  Logout.hs  MemberManagement.hs  NoSessionKey.hs  Register.hs
static/css/: addappointment.css  addmember.css  appointmentmanagement.css  impressum.css  login.css  logout.css  membermanagement.css
static/js/: addappointment.js  addmember.js  appointmentmanagement.js  login.js  logout.js  membermanagement.js  register.js
test/: RESTSpec.hs  WebSrvSpec.hs
