name:                Atemschutzterminplaner
version:             0.1.0.0
synopsis:            Short description of your package
homepage:            https://github.com/githubuser/Atemschutzterminplaner#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                    ,static/css/login.css
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/githubuser/Atemschutzterminplaner#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                      ,Web.View
                      ,Web.Views.Home
                      ,Web.Views.AppointmentManagement
                      ,Web.Views.MemberManagement
                      ,Web.Views.Impressum
                      ,Web.Views.Logout
  build-depends:       base >= 4.7 && < 5
                      , Spock >=0.11
                      , mtl
                      , text
                      , blaze-html >=0.7
                      , time >=1.4
                      , wai-middleware-static >=0.6
                      , blaze-bootstrap >=0.1

  default-language:    Haskell2010

executable Atemschutzterminplaner-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Atemschutzterminplaner
  default-language:    Haskell2010

test-suite Atemschutzterminplaner-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Atemschutzterminplaner
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/Atemschutzterminplaner
